--- a/WebContent/stylesheet/writer.css
+++ b/WebContent/stylesheet/writer.css
@@ -1,16 +1,28 @@
 @charset "utf-8";
 
-*{
-	font-size:16px;
-	margin : 0;
-	padding : 0;
+* {
+	font-size: 16px;
+	margin: 0;
+	padding: 0;
 }
 
-#editor{
+#editor {
+	margin: 20px;
 	background: grey;
+	z-index: -11; 
 }
 
-.circle{
-	z-index:10;
+svg {
+	background: red;
 }
 
+.rect{
+	z-index:1;
+}
+
+
+
+/* footer */
+#footer{
+	background:yellow;
+}
