--- a/WebContent/stylesheet/writer.css
+++ b/WebContent/stylesheet/writer.css
@@ -6,15 +6,17 @@
 	padding: 0;
 }
 
-#editor {
-	margin: 20px;
+body{
 	background: grey;
-	z-index: -11; 
+}
+ 
+#editorContainer {
+	width:100%;
+	height:600px;;
+	background: #FFF;
+ 	z-index: -11; 
 }
 
-svg {
-	background: red;
-}
 
 .rect{
 	z-index:1;
