--- a/WebContent/stylesheet/style.css
+++ b/WebContent/stylesheet/style.css
@@ -83,9 +83,10 @@ a{
 	left:0px;
 }
 
-#planitems{
+#planitemTabs{
 	background:white;
 	height:100%;
+	box-shadow: 0 -1px 3px rgba(0,0,0,.12), 0 1px 2px rgba(0,0,0,.24);
 	/* display:none; */	
 }
 
@@ -93,8 +94,8 @@ a{
 	border: 1px solid black;
 	background :white;
 	margin:1em;
-	width:120px;
-	height:90px;
+	max-width:120px;
+	max-height:90px;
 }
 
 #leftToggle{
@@ -142,9 +143,21 @@ table {
 
 #editorWrap{
 	top:60px; 
+	position:fixed;
 	z-index:-10;
 	width:100%;
 	height:700px;
+}
+
+.editorContainer{
+	width:100%;
+	height:100%;
+	background:white;
+	display:none;
+}
+
+.active{
+	display:block!important;
 }
 
 #footer{
