--- a/WebContent/stylesheet/style.css
+++ b/WebContent/stylesheet/style.css
@@ -122,16 +122,10 @@ a{
 	color :white;
 }
 
-table {
-	font-size: 1em;
-}
-
-.ui-draggable, .ui-droppable {
-	background-position: top;
-}
 
 
-#tabs{
+
+#rightTabs{
 	float:right;
 }
 
